Whitespace fixes

--- a/spirit-haven/src/app/carousel/carousel.component.scss
+++ b/spirit-haven/src/app/carousel/carousel.component.scss
@@ -32,6 +32,7 @@ c-carousel-item .img-fluid {
 .wrapper h1,
 .wrapper h5 {
   color: $white;
+  white-space: pre;
 }
 
 .wrapper h1 {
